# nedapay-wallet-v1

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEMO_DEPLOYMENT.md  README.md  railway.toml  vercel.json
.github/workflows/: main.yml
.github/workflows/environments/: demo-env.yml  production-env.yml
deploy/: README.md
deploy/docker/: Dockerfile  docker-compose.yml
deploy/environments/: .env.example
deploy/k8s/: bank-portal.yaml
deploy/scripts/: deploy.sh
docs/: frontend-dependency-guide.md
frontend/: .env.example  .env.production  .env.vercel  .npmrc  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/scripts/: rotate-secrets.sh
frontend/src/app/: layout.tsx  not-found.tsx  page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/auth/: layout.tsx  metadata.ts
frontend/src/components/admin/: Header.tsx  (+1 more)
frontend/src/hooks/: useTransaction.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/styles/: fonts.css  globals.css  theme.ts
migrations/: 20250321_initial_schema.sql
src/: main.rs
src/api/: admin.rs  audit.rs  auth.rs  error.rs  mod.rs  monitoring.rs  response.rs  security.rs  transaction.rs  wallet.rs
src/api/middleware/: auth.rs
src/config/: deployment.rs
src/models/: audit.rs  mod.rs  reserve.rs  transaction.rs  user.rs  wallet.rs
src/services/: admin.rs  audit.rs  email.rs  mod.rs  monitoring.rs  notification.rs  queue.rs  reconciliation.rs  security.rs
src/templates/: reset_password.hbs  security_alert.hbs  two_factor_enabled.hbs  verify_email.hbs
(+36 files in other folders)
